--- a/style.css
+++ b/style.css
@@ -1,5 +1,56 @@
+@media only screen and (max-width: 600px) {
+    .topico-texto {
+        margin-left: 1%;
+        margin-right: 1%;
+        padding: 0px;
+        
+    }
+
+    .topico {
+        border: 1px solid black;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        box-shadow: #000 6px 4px 10px;
+    }
+    .topico img {
+        width: 99%;
+    }
+
+  }
+
+  @media only screen and (min-width: 600px) {
+    .topico-texto {
+        padding: 20px;
+        margin-top: 20px;
+        /*margin-bottom: 20%;*/
+        margin-left: 25%;
+        margin-right: 25%;
+        text-align: justify;
+    }
+
+    .topico {
+        border: 1px solid black;
+
+        padding: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        margin-left: 25%;
+        margin-right: 25%;
+        box-shadow: #000 6px 4px 10px;
+    }
+    .topico img {
+        width: 99%;
+    }
+    
+
+
+
+  }
+
+
 body {
-    margin:  0;
+    margin: 0;
+    margin-bottom: 20%p;
 }
 
 
@@ -17,34 +68,13 @@ img {
     
 }
 
-.topico {
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 25%;
-    margin-right: 25%;
-    box-shadow: #000 6px 4px 10px;
-}
+
 
 .topico h2 {
     text-align: center;
 }
 
-.topico img {
-    width: 100%;
-}
 
-.topico-texto {
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 25%;
-    margin-right: 25%;
-    text-align: justify;
-    
-}
 
 
 #titulo {
@@ -58,6 +88,8 @@ img {
     display: flex;
     flex-direction: column;
     align-content: center;
+    border: 1px black solid;
+    overflow-x: scroll;
 }
 
 .code img {
@@ -75,11 +107,17 @@ a {
     text-decoration: none;
 }
 
+
 footer {
-    background-color: rgb(181, 181, 181);
-    text-align: center;
+    margin-top: 20px;
     padding-bottom: 40px;
     padding-top: 40px;
     border-top: #000 solid 1px;
-    
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(91, 196, 252);
+    color: white;
+    text-align: center;
+
 }
