--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
         box-shadow: #000 6px 4px 10px;
     }
     .topico img {
-        width: 99%;
+        width: 100%;
     }
 
   }
@@ -42,15 +42,12 @@
         width: 99%;
     }
     
-
-
-
-  }
+}
 
 
 body {
     margin: 0;
-    margin-bottom: 20%p;
+    margin-bottom: 20%;
 }
 
 
