--- a/style.css
+++ b/style.css
@@ -44,10 +44,13 @@
     
 }
 
+html {
+    margin-bottom: 0;
+}
 
 body {
     margin: 0;
-    margin-bottom: 20%;
+    
 }
 
 
@@ -87,6 +90,8 @@ img {
     align-content: center;
     border: 1px black solid;
     overflow-x: scroll;
+    background-color: rgb(38, 38, 38);
+    color: white
 }
 
 .code img {
@@ -107,6 +112,7 @@ a {
 
 footer {
     margin-top: 20px;
+    margin-bottom: 0;
     padding-bottom: 40px;
     padding-top: 40px;
     border-top: #000 solid 1px;
@@ -116,5 +122,4 @@ footer {
     background-color: rgb(91, 196, 252);
     color: white;
     text-align: center;
-
 }
