--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     .topico-texto {
         margin-left: 1%;
         margin-right: 1%;
-        padding: 0px;
+        padding: 2px;
+        text-align: justify;
         
     }
 
@@ -50,6 +51,7 @@ html {
 
 body {
     margin: 0;
+    background-color: rgb(225, 225, 225);
     
 }
 
@@ -119,7 +121,7 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: rgb(91, 196, 252);
+    background-color: rgb(41, 174, 245);
     color: white;
     text-align: center;
 }
